[GPUP] Some media tests related to canvas fail when media in GPU Process is enabled https://bugs.webkit.org/show_bug.cgi?id=221820

Reviewed by Jer Noble.

Source/WebCore:

When "GPU Process: Media" is enabled and "GPU Process: Canvas Rendering" is disabled,
`MediaPlayerPrivateAVFoundationObjC::nativeImageForCurrentTime()` will be called
to get native images (video frames) from a video player. This function will copy
pixel buffers from CoreVideo, and we may need to rotate the pixel buffers before
converting them to native images. The process to copy pixel buffers from CoreVideo
and rotate them is implemented in `MediaPlayerPrivateAVFoundationObjC::updateLastPixelBuffer()`.
It rotates pixel buffers with an `ImageRotationSessionVT` object (`m_imageRotationSession`).

With the current implementation of `ImageRotationSessionVT`, we can rotate pixel buffers
with following two approaches:
- Construct an uninitialized instance, and call `ImageRotationSessionVT::rotate(
MediaSample&, const RotationProperties&, IsCGImageCompatible)`. The `rotate` function
will initialize the object if needed.
- Construct an instance with given rotation properties, size, pixel buffer format,
and CGImage compatibility, then call `ImageRotationSessionVT::rotate(CVPixelBufferRef)`.
When we call the `rotate` function, we need to make sure the pixel buffer's format
is consistent with the `ImageRotationSessionVT` instance. Otherwise, the rotation will
fail and the caller will get an empty pixel buffer (this bug).

In order to use the second approach in `MediaPlayerPrivateAVFoundationObjC`, we need to
figure out the pixel buffer format to construct an ImageRotationSessionVT instance.
But that can only be done after we get a pixel buffer from CoreVideo.

This patch refactors `ImageRotationSessionVT` to better support the aforementioned
second approach. `MediaPlayerPrivateAVFoundationObjC` constructs an `ImageRotationSessionVT`
instance without pixel buffer format, and the `ImageRotationSessionVT` instance
will figure out the pixel buffer format by itself and configures its `CVPixelBufferPool`
properly when we call `rotate` function.

No new tests. Fix a test failure:
- media/video-orientation-canvas.html

* platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
(WebCore::ImageDecoderAVFObjC::readTrackMetadata):
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateRotationSession):
(WebCore::MediaPlayerPrivateAVFoundationObjC::nativeImageForCurrentTime):
We have to update the image synchronously to ensure that the caller gets the correct image.

* platform/graphics/cv/ImageRotationSessionVT.h:
Remove isMatching() because it is not defined/used.
* platform/graphics/cv/ImageRotationSessionVT.mm:
(WebCore::ImageRotationSessionVT::ImageRotationSessionVT):
(WebCore::ImageRotationSessionVT::initialize):
(WebCore::ImageRotationSessionVT::rotate):

* platform/mediastream/mac/RealtimeOutgoingVideoSourceCocoa.mm:
(WebCore::RealtimeOutgoingVideoSourceCocoa::rotatePixelBuffer):

LayoutTests:

* media/video-orientation-canvas.html:
* platform/wk2/TestExpectations:


Canonical link: https://commits.webkit.org/235012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274076 268f45cc-cd09-0410-ab3c-d52691b4dbfc